# aes256

./: Cargo.toml  efile.rs  encrypted.txt  key.txt  perf.data
benches/: benchmark.rs
src/: lib.rs  main.rs
