[package]
name = "aes256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
polybyte = { git = "https://github.com/Quin-Darcy/polybyte.git", branch = "master" }

[profile.test]
overflow-checks = false

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
